--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Burin Chornwaree Profile</h1>
+    <p>I am student at King Mongkut's University of Technology North Bangkok.</p>
 </body>
 </html>
