--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Burin Chornwaree Profile</h1>
     <p>I am student at King Mongkut's University of Technology North Bangkok.</p>
+    <p>I study Github Desktop</p>
 </body>
 </html>
